Configure add-reads in safere-foreign surefire and compiler plugins