@@ -61,6 +61,10 @@
           <compilerArgs combine.children="append">
             <arg>--add-modules</arg>
             <arg>jdk.incubator.vector</arg>
+            <arg>--add-reads</arg>
+            <arg>org.safere=jdk.incubator.vector</arg>
+            <arg>--add-reads</arg>
+            <arg>org.safere.foreign=jdk.incubator.vector</arg>
             <arg>-Xlint:-incubating</arg>
           </compilerArgs>
         </configuration>
@@ -75,6 +79,10 @@
               <compilerArgs combine.children="append">
                 <arg>--add-modules</arg>
                 <arg>jdk.incubator.vector</arg>
+                <arg>--add-reads</arg>
+                <arg>org.safere=jdk.incubator.vector</arg>
+                <arg>--add-reads</arg>
+                <arg>org.safere.foreign=jdk.incubator.vector</arg>
                 <arg>-Xlint:-incubating</arg>
               </compilerArgs>
             </configuration>
@@ -86,7 +94,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.6</version>
         <configuration>
-          <argLine>--add-modules=jdk.incubator.vector</argLine>
+          <argLine>--add-modules=jdk.incubator.vector --add-reads org.safere=jdk.incubator.vector --add-reads org.safere.foreign=jdk.incubator.vector</argLine>
         </configuration>
       </plugin>
     </plugins>
